After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777810 - GstStream and GstStreamCollection missing g_autoptr() support
GstStream and GstStreamCollection missing g_autoptr() support
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-26 22:02 UTC by Brendan Shanks
Modified: 2017-01-27 00:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GstStream/GstStreamCollection: add g_autoptr() support (1.04 KB, patch)
2017-01-26 22:02 UTC, Brendan Shanks
none Details | Review
GstStream/GstStreamCollection: add g_autoptr() support (1.43 KB, patch)
2017-01-26 23:41 UTC, Brendan Shanks
committed Details | Review

Description Brendan Shanks 2017-01-26 22:02:46 UTC
Created attachment 344364 [details] [review]
GstStream/GstStreamCollection: add g_autoptr() support

Using g_autoptr(GstStream) or g_autoptr(GstStreamCollection) fails with compile errors.
Comment 1 Tim-Philipp Müller 2017-01-26 23:23:10 UTC
Thanks for the patch, any chance you could submit it in git format-patch format? (So it has a commit message and author info etc.)

https://gstreamer.freedesktop.org/documentation/contribute/index.html#how-to-prepare-a-patch-for-submission
Comment 2 Brendan Shanks 2017-01-26 23:41:54 UTC
Created attachment 344367 [details] [review]
GstStream/GstStreamCollection: add g_autoptr() support
Comment 3 Tim-Philipp Müller 2017-01-27 00:40:57 UTC
Thanks!

 commit e286e81856f0794bf5167bde508ec45c41fb2c92
 Author: Brendan Shanks <brendan.shanks@teradek.com>
 Date:   Thu Jan 26 15:32:31 2017 -0800

    GstStream/GstStreamCollection: add g_autoptr() support
    
    https://bugzilla.gnome.org/show_bug.cgi?id=777810