GstStream/GstStreamCollection: add g_autoptr() support

https://bugzilla.gnome.org/show_bug.cgi?id=777810