gst/gststreams.h
@@ -130,6 +130,11 @@ void     gst_stream_set_caps (GstStream *stream, GstCaps *caps);
 GstCaps *gst_stream_get_caps (GstStream *stream);
 
 const gchar *gst_stream_type_get_name (GstStreamType stype);
+
+#ifdef G_DEFINE_AUTOPTR_CLEANUP_FUNC
+G_DEFINE_AUTOPTR_CLEANUP_FUNC(GstStream, gst_object_unref)
+#endif
+
 G_END_DECLS
 
 #endif /* __GST_STREAMS_H__ */
